--- a/fonts/demo.html
+++ b/fonts/demo.html
@@ -64,89 +64,89 @@
         }
         .page {
             background: #fff;
-            width: 920px;
+            width: rem(920px);
             margin: 0 auto;
-            padding: 20px 20px 0 20px;
+            padding: rem(20px) rem(20px) 0 rem(20px);
             overflow: hidden;
         }
         .font-container {
             overflow-x: auto;
             overflow-y: hidden;
-            margin-bottom: 40px;
+            margin-bottom: rem(40px);
             line-height: 1.3;
             white-space: nowrap;
-            padding-bottom: 5px;
+            padding-bottom: rem(5px);
         }
         h1 {
             position: relative;
             background: #444;
-            font-size: 32px;
+            font-size: rem(32px);
             color: #fff;
-            padding: 10px 20px;
-            margin: 0 -20px 12px -20px;
+            padding: rem(10px) rem(20px);
+            margin: 0 rem(-20px) rem(12px) rem(-20px);
         }
         .letters {
-            font-size: 25px;
-            margin-bottom: 20px;
+            font-size: rem(25px);
+            margin-bottom: rem(20px);
         }
         .s10:before {
-            content: '10px';
+            content: 'rem(10px)';
         }
         .s11:before {
-            content: '11px';
+            content: 'rem(11px)';
         }
         .s12:before {
-            content: '12px';
+            content: 'rem(12px)';
         }
         .s14:before {
-            content: '14px';
+            content: 'rem(14px)';
         }
         .s18:before {
-            content: '18px';
+            content: 'rem(18px)';
         }
         .s24:before {
-            content: '24px';
+            content: 'rem(24px)';
         }
         .s30:before {
-            content: '30px';
+            content: 'rem(30px)';
         }
         .s36:before {
-            content: '36px';
+            content: 'rem(36px)';
         }
         .s48:before {
-            content: '48px';
+            content: 'rem(48px)';
         }
         .s60:before {
-            content: '60px';
+            content: 'rem(60px)';
         }
         .s72:before {
-            content: '72px';
+            content: 'rem(72px)';
         }
         .s10:before, .s11:before, .s12:before, .s14:before,
         .s18:before, .s24:before, .s30:before, .s36:before,
         .s48:before, .s60:before, .s72:before {
             font-family: Arial, sans-serif;
-            font-size: 10px;
+            font-size: rem(10px);
             font-weight: normal;
             font-style: normal;
             color: #999;
-            padding-right: 6px;
+            padding-right: rem(6px);
         }
         pre {
             display: block;
             position: relative;
-            padding: 9px;
-            margin: 0 0 10px;
+            padding: rem(9px);
+            margin: 0 0 rem(10px);
             font-family: Monaco, Menlo, Consolas, "Courier New", monospace !important;
-            font-size: 13px;
+            font-size: rem(13px);
             line-height: 1.428571429;
             color: #333;
             font-weight: normal !important;
             font-style: normal !important;
             background-color: #f5f5f5;
-            border: 1px solid #ccc;
+            border: rem(1px) solid #ccc;
             overflow-x: auto;
-            border-radius: 4px;
+            border-radius: rem(4px);
         }
         pre:after {
             display: block;
@@ -155,18 +155,18 @@
             top: 0;
             content: 'Usage';
             line-height: 1;
-            padding: 5px 8px;
-            font-size: 12px;
+            padding: rem(5px) rem(8px);
+            font-size: rem(12px);
             color: #767676;
             background-color: #fff;
-            border: 1px solid #ccc;
+            border: rem(1px) solid #ccc;
             border-right: none;
             border-top: none;
-            border-radius: 0 4px 0 4px;
+            border-radius: 0 rem(4px) 0 rem(4px);
             z-index: 10;
         }
         /* responsive */
-        @media (max-width: 959px) {
+        @media (max-width: rem(959px)) {
             .page {
                 width: auto;
                 margin: 0;
@@ -189,17 +189,17 @@
 ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
                 0123456789.:,;()*!?'@#<>$%&^+-=~
             </p>
-            <p class="s10" style="font-size: 10px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s11" style="font-size: 11px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s12" style="font-size: 12px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s14" style="font-size: 14px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s18" style="font-size: 18px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s24" style="font-size: 24px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s30" style="font-size: 30px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s36" style="font-size: 36px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s48" style="font-size: 48px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s60" style="font-size: 60px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s72" style="font-size: 72px;">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s10" style="font-size: rem(10px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s11" style="font-size: rem(11px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s12" style="font-size: rem(12px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s14" style="font-size: rem(14px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s18" style="font-size: rem(18px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s24" style="font-size: rem(24px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s30" style="font-size: rem(30px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s36" style="font-size: rem(36px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s48" style="font-size: rem(48px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s60" style="font-size: rem(60px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s72" style="font-size: rem(72px);">The quick brown fox jumps over the lazy dog.</p>
         </div>
     </div>
     <div class="demo" style="font-family: 'Ubuntu'; font-weight: 500; font-style: normal;">
@@ -215,17 +215,17 @@ ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
 ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
                 0123456789.:,;()*!?'@#<>$%&^+-=~
             </p>
-            <p class="s10" style="font-size: 10px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s11" style="font-size: 11px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s12" style="font-size: 12px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s14" style="font-size: 14px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s18" style="font-size: 18px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s24" style="font-size: 24px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s30" style="font-size: 30px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s36" style="font-size: 36px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s48" style="font-size: 48px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s60" style="font-size: 60px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s72" style="font-size: 72px;">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s10" style="font-size: rem(10px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s11" style="font-size: rem(11px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s12" style="font-size: rem(12px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s14" style="font-size: rem(14px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s18" style="font-size: rem(18px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s24" style="font-size: rem(24px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s30" style="font-size: rem(30px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s36" style="font-size: rem(36px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s48" style="font-size: rem(48px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s60" style="font-size: rem(60px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s72" style="font-size: rem(72px);">The quick brown fox jumps over the lazy dog.</p>
         </div>
     </div>
     <div class="demo" style="font-family: 'Ubuntu'; font-weight: normal; font-style: normal;">
@@ -241,17 +241,17 @@ ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
 ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
                 0123456789.:,;()*!?'@#<>$%&^+-=~
             </p>
-            <p class="s10" style="font-size: 10px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s11" style="font-size: 11px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s12" style="font-size: 12px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s14" style="font-size: 14px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s18" style="font-size: 18px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s24" style="font-size: 24px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s30" style="font-size: 30px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s36" style="font-size: 36px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s48" style="font-size: 48px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s60" style="font-size: 60px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s72" style="font-size: 72px;">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s10" style="font-size: rem(10px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s11" style="font-size: rem(11px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s12" style="font-size: rem(12px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s14" style="font-size: rem(14px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s18" style="font-size: rem(18px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s24" style="font-size: rem(24px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s30" style="font-size: rem(30px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s36" style="font-size: rem(36px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s48" style="font-size: rem(48px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s60" style="font-size: rem(60px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s72" style="font-size: rem(72px);">The quick brown fox jumps over the lazy dog.</p>
         </div>
     </div>
     <div class="demo" style="font-family: 'Ubuntu'; font-weight: 300; font-style: normal;">
@@ -267,17 +267,17 @@ ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
 ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
                 0123456789.:,;()*!?'@#<>$%&^+-=~
             </p>
-            <p class="s10" style="font-size: 10px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s11" style="font-size: 11px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s12" style="font-size: 12px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s14" style="font-size: 14px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s18" style="font-size: 18px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s24" style="font-size: 24px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s30" style="font-size: 30px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s36" style="font-size: 36px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s48" style="font-size: 48px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s60" style="font-size: 60px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s72" style="font-size: 72px;">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s10" style="font-size: rem(10px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s11" style="font-size: rem(11px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s12" style="font-size: rem(12px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s14" style="font-size: rem(14px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s18" style="font-size: rem(18px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s24" style="font-size: rem(24px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s30" style="font-size: rem(30px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s36" style="font-size: rem(36px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s48" style="font-size: rem(48px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s60" style="font-size: rem(60px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s72" style="font-size: rem(72px);">The quick brown fox jumps over the lazy dog.</p>
         </div>
     </div>
     <div class="demo" style="font-family: 'Gagalin'; font-weight: normal; font-style: normal;">
@@ -293,17 +293,17 @@ ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
 ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
                 0123456789.:,;()*!?'@#<>$%&^+-=~
             </p>
-            <p class="s10" style="font-size: 10px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s11" style="font-size: 11px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s12" style="font-size: 12px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s14" style="font-size: 14px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s18" style="font-size: 18px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s24" style="font-size: 24px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s30" style="font-size: 30px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s36" style="font-size: 36px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s48" style="font-size: 48px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s60" style="font-size: 60px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s72" style="font-size: 72px;">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s10" style="font-size: rem(10px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s11" style="font-size: rem(11px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s12" style="font-size: rem(12px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s14" style="font-size: rem(14px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s18" style="font-size: rem(18px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s24" style="font-size: rem(24px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s30" style="font-size: rem(30px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s36" style="font-size: rem(36px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s48" style="font-size: rem(48px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s60" style="font-size: rem(60px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s72" style="font-size: rem(72px);">The quick brown fox jumps over the lazy dog.</p>
         </div>
     </div>
     <div class="demo" style="font-family: 'Lifehack'; font-weight: 500; font-style: normal;">
@@ -319,17 +319,17 @@ ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
 ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
                 0123456789.:,;()*!?'@#<>$%&^+-=~
             </p>
-            <p class="s10" style="font-size: 10px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s11" style="font-size: 11px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s12" style="font-size: 12px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s14" style="font-size: 14px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s18" style="font-size: 18px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s24" style="font-size: 24px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s30" style="font-size: 30px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s36" style="font-size: 36px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s48" style="font-size: 48px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s60" style="font-size: 60px;">The quick brown fox jumps over the lazy dog.</p>
-            <p class="s72" style="font-size: 72px;">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s10" style="font-size: rem(10px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s11" style="font-size: rem(11px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s12" style="font-size: rem(12px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s14" style="font-size: rem(14px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s18" style="font-size: rem(18px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s24" style="font-size: rem(24px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s30" style="font-size: rem(30px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s36" style="font-size: rem(36px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s48" style="font-size: rem(48px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s60" style="font-size: rem(60px);">The quick brown fox jumps over the lazy dog.</p>
+            <p class="s72" style="font-size: rem(72px);">The quick brown fox jumps over the lazy dog.</p>
         </div>
     </div>
 </div>
