--- a/index.html
+++ b/index.html
@@ -196,16 +196,220 @@
                             <img src="./img/content/burgers/kkal.png" alt="Калорийность" class="kkal-img">
                         </li>
                         <li class="burgers__item">
-                            <!-- <img src="./img/content/burgers/composition.png" alt="Состав" class="composition-img"> -->
+                            <div class="composition">
+                                <div class="composition__content">
+                                    <img src="./img/content/burgers/composition.png" alt="Состав">
+                                    <ul class="composition__list">
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/beef.png" alt="Говядина">
+                                            <span>Говядина</span>
+                                            <span>300гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/buns.png" alt="Булочки">
+                                            <span>Булочки</span>
+                                            <span>100гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/salad.png" alt="Зелень">
+                                            <span>Зелень</span>
+                                            <span>70гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/sauce.png" alt="Соус">
+                                            <span>Соус</span>
+                                            <span>150гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/cucumber.png" alt="Овощи">
+                                            <span>Овощи</span>
+                                            <span>200гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/cheese.png" alt="Сыр">
+                                            <span>Сыр</span>
+                                            <span>80гр</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                             <div class="burgers__item-img">
-                                <img src="./img/content/burgers/Dark Beef Burger.png" alt="Тёмный бургер" class="burger-img">
+                                <img src="./img/content/burgers/NYC-Diner Bacon Cheeseburger.png" alt="Чизбургер с беконом по нью-йоркски" class="burger-img">
                             </div>
                             <div class="burgers__item-desc">
-                                <h4 class="item-desc__title">Dark Beef Burger</h4>
+                                <h4 class="item-desc__title">NYC-Diner Bacon Cheeseburger</h4>
                                 <p class="item-desc__text">
-                                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, 
-                                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, 
-                                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam perspiciatis exercitationem sed aperiam recusandae, 
+                                        ipsa odit deleniti quidem nemo totam? 
+                                </p>
+                                <div class="item-desc__order">
+                                    <span class="order__price">650</span>
+                                    <span class="order__currency">руб.</span>
+                                    <a href="#" class="btn">Заказать</a>
+                                </div>     
+                            </div>
+                            <img src="./img/content/burgers/kkal.png" alt="Калорийность" class="kkal-img">
+                        </li>
+                        <li class="burgers__item">
+                            <div class="composition">
+                                <div class="composition__content">
+                                    <img src="./img/content/burgers/composition.png" alt="Состав">
+                                    <ul class="composition__list">
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/beef.png" alt="Говядина">
+                                            <span>Говядина</span>
+                                            <span>300гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/buns.png" alt="Булочки">
+                                            <span>Булочки</span>
+                                            <span>100гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/salad.png" alt="Зелень">
+                                            <span>Зелень</span>
+                                            <span>70гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/sauce.png" alt="Соус">
+                                            <span>Соус</span>
+                                            <span>150гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/cucumber.png" alt="Овощи">
+                                            <span>Овощи</span>
+                                            <span>200гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/cheese.png" alt="Сыр">
+                                            <span>Сыр</span>
+                                            <span>80гр</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="burgers__item-img">
+                                <img src="./img/content/burgers/Chicken burger.png" alt="Куриный бургер" class="burger-img">
+                            </div>
+                            <div class="burgers__item-desc">
+                                <h4 class="item-desc__title">Chicken Burger</h4>
+                                <p class="item-desc__text">
+                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo sit, sed inventore architecto
+                                         minima error, vel nemo quidem quas nisi id aliquid iste nostrum quis distinctio similique 
+                                         asperiores dicta soluta laborum non atque, doloribus nihil cumque. Repudiandae alias unde nesciunt!
+                                </p>
+                                <div class="item-desc__order">
+                                    <span class="order__price">475</span>
+                                    <span class="order__currency">руб.</span>
+                                    <a href="#" class="btn">Заказать</a>
+                                </div>     
+                            </div>
+                            <img src="./img/content/burgers/kkal.png" alt="Калорийность" class="kkal-img">
+                        </li>
+                        <li class="burgers__item">
+                            <div class="composition">
+                                <div class="composition__content">
+                                    <img src="./img/content/burgers/composition.png" alt="Состав">
+                                    <ul class="composition__list">
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/beef.png" alt="Говядина">
+                                            <span>Говядина</span>
+                                            <span>300гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/buns.png" alt="Булочки">
+                                            <span>Булочки</span>
+                                            <span>100гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/salad.png" alt="Зелень">
+                                            <span>Зелень</span>
+                                            <span>70гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/sauce.png" alt="Соус">
+                                            <span>Соус</span>
+                                            <span>150гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/cucumber.png" alt="Овощи">
+                                            <span>Овощи</span>
+                                            <span>200гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/cheese.png" alt="Сыр">
+                                            <span>Сыр</span>
+                                            <span>80гр</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="burgers__item-img">
+                                <img src="./img/content/burgers/Spicy Shrimp Burger.png" alt="Бургер с острыми креветками" class="burger-img">
+                            </div>
+                            <div class="burgers__item-desc">
+                                <h4 class="item-desc__title">Spicy Shrimp Burger</h4>
+                                <p class="item-desc__text">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolorem ut, aliquid ducimus assumenda vel 
+                                        voluptate veniam rerum, vitae est aperiam quis repellendus consectetur quam magni sit error dolore accusamus
+                                         nemo minima ipsum quia quos! Molestias voluptatibus quaerat fugiat mollitia.
+                                </p>
+                                <div class="item-desc__order">
+                                    <span class="order__price">800</span>
+                                    <span class="order__currency">руб.</span>
+                                    <a href="#" class="btn">Заказать</a>
+                                </div>     
+                            </div>
+                            <img src="./img/content/burgers/kkal.png" alt="Калорийность" class="kkal-img">
+                        </li>
+                        <li class="burgers__item">
+                            <div class="composition">
+                                <div class="composition__content">
+                                    <img src="./img/content/burgers/composition.png" alt="Состав">
+                                    <ul class="composition__list">
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/beef.png" alt="Говядина">
+                                            <span>Говядина</span>
+                                            <span>300гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/buns.png" alt="Булочки">
+                                            <span>Булочки</span>
+                                            <span>100гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/salad.png" alt="Зелень">
+                                            <span>Зелень</span>
+                                            <span>70гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/sauce.png" alt="Соус">
+                                            <span>Соус</span>
+                                            <span>150гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/cucumber.png" alt="Овощи">
+                                            <span>Овощи</span>
+                                            <span>200гр</span>
+                                        </li>
+                                        <li class="composition__item">
+                                            <img src="./img/content/burgers/cheese.png" alt="Сыр">
+                                            <span>Сыр</span>
+                                            <span>80гр</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="burgers__item-img">
+                                <img src="./img/content/burgers/Burger sandwich.png" alt="Бургер-сэндвич" class="burger-img">
+                            </div>
+                            <div class="burgers__item-desc">
+                                <h4 class="item-desc__title">Burger Sandwich</h4>
+                                <p class="item-desc__text">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis iusto mollitia tempora fuga! 
+                                        Expedita, eius. Quidem, dolor aliquam ut praesentium assumenda id ab libero nesciunt aut 
+                                        nobis suscipit laboriosam ea minima debitis tempora numquam velit aperiam adipisci voluptatem 
+                                        distinctio. Distinctio.
                                 </p>
                                 <div class="item-desc__order">
                                     <span class="order__price">500</span>
@@ -469,6 +673,10 @@
                             <div class="player__playback">
                                 <button class="player__playback-button"></button>
                             </div>
+                            <button class="player__mute"></button>
+                            <div class="player__playback-vol">
+                                <button class="player__playback-button-vol"></button>
+                            </div>
                             <div class="player__duration">
                                 <span class="player__duration-completed">0:00</span>
                                 <span class="player__duration-estimate">0:00</span>
@@ -562,22 +770,22 @@
                         <div class="contacts__socials">
                             <svg class="vk">
                                 <a href="https://vk.com/" class="socials__link"> 
-                                    <use xLink:href="img/icons/sprite.svg#vk"></use>
+                                    <use xLink:href="./img/icons/sprite.svg#vk"></use>
                                 </a>
                             </svg>
                             <svg class="fb">
                                 <a href="https://www.facebook.com/" class="socials__link"> 
-                                    <use xLink:href="img/icons/sprite.svg#fb"></use>
+                                    <use xLink:href="./img/icons/sprite.svg#fb"></use>
                                 </a>
                             </svg>
                             <svg class="instagram">
                                 <a href="https://www.instagram.com/?hl=en" class="socials__link"> 
-                                    <use xLink:href="img/icons/sprite.svg#instagram"></use>
+                                    <use xLink:href="./img/icons/sprite.svg#instagram"></use>
                                 </a>    
                             </svg>
                             <svg class="twitter">
                                 <a href="https://twitter.com/?lang=en" class="socials__link">
-                                    <use xLink:href="img/icons/sprite.svg#twitter"></use>
+                                    <use xLink:href="./img/icons/sprite.svg#twitter"></use>
                                 </a>
                             </svg>
                         </div>
@@ -616,6 +824,9 @@
                 <li class="fixed-menu__item">
                     <a class="fixed__menu__link" href="" data-scroll-to="7"></a>     
                 </li>
+                <li class="fixed-menu__item">
+                    <a class="fixed__menu__link" href="" data-scroll-to="8"></a>     
+                </li>
             </ul>
         </nav>
 
@@ -638,10 +849,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.3/mobile-detect.min.js"></script>
 <script src="./js/carousel/owl.carousel.min.js"></script>
 <script src="https://www.youtube.com/iframe_api"></script>
-<script src="https://api-maps.yandex.ru/2.1/?apikey=<2bded53b-d2cc-4d87-8837-9e972d9fcbba>&lang=ru_RU" type="text/javascript">
-</script>
+<script src="https://api-maps.yandex.ru/2.1/?apikey=<2bded53b-d2cc-4d87-8837-9e972d9fcbba>&lang=ru_RU" type="text/javascript"></script>
 <script src="./js/main.js"></script>
-
 
 </body>
 </html>
